<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:ignore="MissingTranslation">听小方家庭版</string>
    <string name="to_register" tools:ignore="MissingTranslation"><u>没有账号？立即注册！</u></string>


    <string name="instruction1" tools:ignore="MissingTranslation">1.使用前确认机器人电量充足，能够正常开启。\n2.当机器人提示电量低时，请及时充电，连接电源时红灯亮，电量充满时红灯闪烁，请确认使用5V电源适配器充电。\n3.机器人不得暴露在高温、低温或其他极端环境下，浸水后不得使用。\n4.轻拿轻放机器人，请勿摔打，以免产品造成损坏。\n5.配套点读卡需妥善保管，避免划伤儿童、弄脏卡片，影响点读效果。\n6.低龄儿童请在家长看护下使用。\n7.自购买之日起一年内，如非人为损坏，可享受免保修费服务。\n8.用户可凭购买凭证联系客服进行售后维修。</string>
    <string name="instruction2" tools:ignore="MissingTranslation">用途：\n动物园大冒险：可以在孩子认识动物的同时，锻炼孩子的瞬间识别能力、快速记忆能力。孩子通过自主编程，按照自己的思维设计路线去寻找指定的小动物，培养孩子编程思维逻辑。\n太阳系讲解：通过对每个星球特性的了解，加强对太阳系以及整个宇宙的认知，提高孩子对宇宙未知事物探索和研究的兴趣。\n\n玩法说明：\n1.看谁找得快：快速找出某一随机小动物；\n2.看谁记得准：快速记忆并按顺序找出随机三个小动物。\n3.动物园寻宝：自主编程，设计路线，寻找随机小动物上的宝藏\n4.听指挥找动物：根据提示，按照路线去寻找指定的小动物\n5.听特征猜动物：根据动物特征寻找指定的小动物。</string>
    <string name="instruction3" tools:ignore="MissingTranslation">用途：\n\u3000认知卡片中包括日常生活中的水果蔬菜，动植物等，也包含了英文字母，数字，唐诗宋词以及成语故事等，通过“听”和“看”的方式，更加形象具体的将知识展现出来，使孩子对于事物充满好奇，提高孩子自学能力和认知兴趣，也能更加深入的了解身边的事物，使孩子对科学，对自然，对世界产生浓厚的探索欲望。\n\n卡片内容：\n\u3000\u3000动物卡片11张\n\u3000\u3000古诗卡片10张\n\u3000\u3000蔬菜/水果卡片30张\n\u3000\u3000成语故事卡片8张\n\u3000\u3000字母卡片26张\n\u3000\u3000数字卡片11张\n玩法介绍：\n    \u3000使用听小方对卡片进行点读，听小方会播放与卡片内容相关的声音。</string>
    <string name="instruction4" tools:ignore="MissingTranslation">用途：\n\u3000百变九宫格是在舒尔特表的基础上，增加了对记忆力的强化训练，数字随机分布排列增加了记忆难度，并且通过这种方式训练孩子的“照相机”功能，所谓“照相机”是指孩子在看到一幅画面是瞬间记下整个画面，百变九宫格就是以舒尔特表的形式锻炼这项能力，同时通过竞赛的方式，激发孩子的胜负欲，提高训练兴趣，增强训练效果。\n\n卡片内容：\n\u3000空白舒尔特表/选择题选项\n玩法介绍：\n1.将听小方与APP连接，选择空白舒尔特游戏，输入默认时间，并开始默记数字为止，听到开始指令后，在空白舒尔特表上按数字大小顺序的位置点读表格；\n2.将听小方与APP连接，选择趣味知识竞赛，听小方APP会显示题目与对应答题时间，使用听小方点读答案选项，听小方会告诉你是否回答正确。</string>
    <string name="instruction5" tools:ignore="MissingTranslation">用途：\n\u3000电子钢琴模拟真实钢琴发音，可以通过听小方点读钢琴按键，演奏简单的音乐；AI人工智能音乐可以通过点击几个简单的音符自动生成一首完整的旋律，孩子通可以创作属于自己的美妙旋律。\n\n卡片内容：\n\u3000电子钢琴/AI音乐\n玩法介绍：\n1.电子钢琴：每个钢琴图案按键对应一个音节，使用听小方点击钢琴按键即可进行钢琴演奏。\n2.AI音乐：听小方与APP连接，使用听小凡点击“编曲开始”，之后点击音节进行音乐创作（音节不多于12个），完成后点击“编曲结束”，打开听小方APP点击“开始创作”，再选择单弦/和弦播放即可播放属于自己的AI音乐。</string>
    <string name="instruction6" tools:ignore="MissingTranslation">用途：\n\u3000舒尔特表通过动态的视觉练习来锻炼视神经末梢。心理学上用此表来研究和训练心理感知的速度，同时训练视觉定向搜索运动的速度。舒尔特表也用来培养注意力集中、分配、控制能力；拓展视幅；加快视频；提高视觉的稳定性、辨别力。练习的时间越长，看表所需的时间会越短。随着练习的深入，眼球的末梢视觉能力不断提高，可以有效的地拓展视幅，加快阅读节奏，锻炼眼睛快速阅读的能力。\n\n卡片内容：\n\u3000数字卡片25张，难度卡片3张，功能卡片2张\n玩法介绍：\n1.选择难度，例如：“3X3”，取数字卡片1~9，打乱顺序排列成正方形；\n2.拿取听小方，点读难度卡（3X3），等待语音提示后，开始点击卡片；</string>
</resources>
