<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_instruction">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/background_round_50a">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/layout_instruction1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:gravity="center"
                    android:text="日常使用说明"
                    android:textColor="@color/black"
                    android:textSize="40dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="8dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="30dp"
                    android:background="#fabe00" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="20dp"
                    android:gravity="left"
                    android:text="@string/instruction1"
                    android:textColor="#937003"
                    android:textSize="20dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_instruction2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:gravity="center"
                    android:text="编程地图说明"
                    android:textColor="@color/black"
                    android:textSize="40dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="140dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:layout_weight="1"
                        android:adjustViewBounds="true"
                        android:scaleType="centerInside"
                        android:src="@drawable/program_map" />

                    <ImageView
                        android:layout_width="140dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:layout_marginRight="30dp"
                        android:layout_weight="1"
                        android:adjustViewBounds="true"
                        android:scaleType="centerInside"
                        android:src="@drawable/instruction_space" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="8dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="30dp"
                    android:background="#fabe00" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="20dp"
                    android:gravity="left"
                    android:text="@string/instruction2"
                    android:textColor="#937003"
                    android:textSize="20dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_instruction3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:gravity="center"
                    android:text="认知卡片说明"
                    android:textColor="@color/black"
                    android:textSize="40dp" />

                <ImageView
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:scaleType="centerInside"
                    android:src="@drawable/instruction_card" />


                <View
                    android:layout_width="match_parent"
                    android:layout_height="8dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="30dp"
                    android:background="#fabe00" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="20dp"
                    android:gravity="left"
                    android:text="@string/instruction3"
                    android:textColor="#937003"
                    android:textSize="20dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_instruction4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:gravity="center"
                    android:text="百变九宫格说明"
                    android:textColor="@color/black"
                    android:textSize="40dp" />

                <ImageView
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:scaleType="centerInside"
                    android:src="@drawable/instruction_table" />


                <View
                    android:layout_width="match_parent"
                    android:layout_height="8dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="30dp"
                    android:background="#fabe00" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="20dp"
                    android:gravity="left"
                    android:text="@string/instruction4"
                    android:textColor="#937003"
                    android:textSize="20dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_instruction5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:gravity="center"
                    android:text="电子钢琴说明"
                    android:textColor="@color/black"
                    android:textSize="40dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="140dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:layout_weight="1"
                        android:adjustViewBounds="true"
                        android:scaleType="centerInside"
                        android:src="@drawable/instruction_piano1" />

                    <ImageView
                        android:layout_width="140dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:layout_marginRight="30dp"
                        android:layout_weight="1"
                        android:adjustViewBounds="true"
                        android:scaleType="centerInside"
                        android:src="@drawable/instruction_piano2" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="8dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="30dp"
                    android:background="#fabe00" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="20dp"
                    android:gravity="left"
                    android:text="@string/instruction5"
                    android:textColor="#937003"
                    android:textSize="20dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_instruction6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:gravity="center"
                    android:text="舒尔特数字卡说明"
                    android:textColor="@color/black"
                    android:textSize="40dp" />

                <ImageView
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:scaleType="centerInside"
                    android:src="@drawable/instruction_card2" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="8dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="30dp"
                    android:background="#fabe00" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="20dp"
                    android:gravity="left"
                    android:text="@string/instruction6"
                    android:textColor="#937003"
                    android:textSize="20dp" />
            </LinearLayout>

        </FrameLayout>


    </ScrollView>

</FrameLayout>